--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -35,7 +35,7 @@ application/icon=""
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Gleisbelegung"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
