--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "godot_tools.editor_path": "c:\\Program Files\\Godot\\Godot_v3.4.4-stable_mono_win64\\Godot_v3.4.4-stable_mono_win64.exe"
+    "godot_tools.editor_path": "c:\\Program Files\\Godot\\Godot_v3.4.4-stable_mono_win64\\Godot_v3.4.4-stable_mono_win64.exe",
+    "cSpell.words": [
+        "gleis"
+    ]
 }
