--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
 on:
   push:
     branches:
-      - master
-    paths:
-      - 'game/**'
-
+      - main
 jobs:
   export_game:
     runs-on: ubuntu-latest
