--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         godot_template_version: 3.4.4.stable
         relative_project_path: ./
       env:
-        GITHUB_TOKEN: ${{ secrets.EXPORT_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
