--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Windows"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -42,7 +42,7 @@ application/trademarks=""
 
 [preset.1]
 
-name="Linux/X11"
+name="Linux"
 platform="Linux/X11"
 runnable=true
 custom_features=""
@@ -64,3 +64,36 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
+
+[preset.2]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="Builds/MacOs/Gleisbelegung.zip"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier="com.gleisbelegung"
+application/signature=""
+application/app_category="Games"
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
