--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,21 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v2.0.0
+
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
+      with:
+        java-version: 1.8
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+      
+    - name: install wine
+      id: wine_install
+      run: |
+        sudo apt install wine64
+        echo ::set-output name=WINE_PATH::$(which wine64)
+        
     - name: export
       uses: firebelley/godot-export@v3.0.0
       with:
@@ -16,5 +31,6 @@ jobs:
         godot_executable_download_url: https://github.com/godotengine/godot/releases/download/3.4.4-stable/Godot_v3.4.4-stable_mono_linux_headless_64.zip
         godot_export_templates_download_url: https://github.com/godotengine/godot/releases/download/3.4.4-stable/Godot_v3.4.4-stable_mono_export_templates.tpz
         relative_project_path: ./
+        wine_path: ${{ steps.wine_install.outputs.WINE_PATH }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
