--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 1.8
 
     - name: Setup Android SDK
@@ -23,7 +24,7 @@ jobs:
       run: |
         sudo apt install wine64
         echo ::set-output name=WINE_PATH::$(which wine64)
-        
+
     - name: export
       uses: firebelley/godot-export@v3.0.0
       with:
