--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -117,16 +117,16 @@ custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
 custom_template/export_format=0
-architectures/armeabi-v7a=true
+architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
+keystore/release="D:/dev/godot/Gleisbelegung/Gleisbelegung.keystore"
+keystore/release_user="Gleisbelegung"
+keystore/release_password="q72eVG*7ayK@FT"
 one_click_deploy/clear_previous_install=false
 version/code=1
 version/name="1.0"
