fix keystore path

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -124,7 +124,7 @@ architectures/x86_64=false
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
-keystore/release="D:/dev/godot/Gleisbelegung/Gleisbelegung.keystore"
+keystore/release="Gleisbelegung.keystore"
 keystore/release_user="Gleisbelegung"
 keystore/release_password="q72eVG*7ayK@FT"
 one_click_deploy/clear_previous_install=false
