--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -121,9 +121,9 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-keystore/debug=""
-keystore/debug_user=""
-keystore/debug_password=""
+keystore/debug="Gleisbelegung.keystore"
+keystore/debug_user="Gleisbelegung"
+keystore/debug_password="q72eVG*7ayK@FT"
 keystore/release="Gleisbelegung.keystore"
 keystore/release_user="Gleisbelegung"
 keystore/release_password="q72eVG*7ayK@FT"
