--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2.0.0
 
-    - name: Set up JDK 1.8
+    - name: Set up JDK 18.0.1+10
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: 8.0.332+9
+        java-version: 18.0.1+10
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
