--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2.0.0
 
-    - name: Set up JDK 18.0.1+10
+    - name: Set up JDK 17.0.3+7
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: 18.0.1+10
+        java-version: 17.0.3+7
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
@@ -25,10 +25,10 @@ jobs:
         sudo apt install wine64
         echo ::set-output name=WINE_PATH::$(which wine64)
 
-    - name: prepare android
-      run: |
-        echo "${{ secrets.ANDROID_RELEASE_KEYSTORE_ENCRYPTED }}" > Gleisbelegung.keystore.asc
-        gpg -d -passphrase "${{ secrets.ANDROID_RELEASE_KEYSTORE_PASSWORD }}" --batch Gleisbelegung.keystore.asc > Gleisbelegung.keystore
+    # - name: prepare android
+    #   run: |
+    #     echo "${{ secrets.ANDROID_RELEASE_KEYSTORE_ENCRYPTED }}" > Gleisbelegung.keystore.asc
+    #     gpg -d -passphrase "${{ secrets.ANDROID_RELEASE_KEYSTORE_PASSWORD }}" --batch Gleisbelegung.keystore.asc > Gleisbelegung.keystore
 
     - name: export
       uses: firebelley/godot-export@v3.0.0
