--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,6 @@ jobs:
         godot_export_templates_download_url: https://github.com/godotengine/godot/releases/download/3.4.4-stable/Godot_v3.4.4-stable_mono_export_templates.tpz
         relative_project_path: ./
         wine_path: ${{ steps.wine_install.outputs.WINE_PATH }}
+        archive_single_release_output: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
