--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v2.0.0
+      with:
+        fetch-depth: 0
 
     - name: Set up JDK 17.0.3+7
       uses: actions/setup-java@v3
