--- a/Gleisbelegung.csproj
+++ b/Gleisbelegung.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Gleisbelegung</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ColorHashSharp" Version="1.0.0" />
     <PackageReference Include="DotNetZip" Version="1.16.0" />
     <PackageReference Include="Octokit" Version="0.51.0" />
     <PackageReference Include="PubSub" Version="4.0.2" />
