--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="Builds/Windows/Gleisbelegung.exe"
 script_export_mode=1
@@ -47,7 +47,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="Builds/Linux/Gleisbelegung.x86_64"
 script_export_mode=1
@@ -72,7 +72,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="Builds/MacOs/Gleisbelegung.zip"
 script_export_mode=1
@@ -105,7 +105,7 @@ platform="Android"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="Builds/Android/Gleisbelegung.apk"
 script_export_mode=1
