--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     
     - name: export game
       # Use latest version (see releases for all versions)
-      uses: firebelley/godot-export@v4.0.0
+      uses: firebelley/godot-export@update-4
       with:
         # Defining all the required inputs
         # I used the mono version of Godot in this example
